[package]
name = "sorted_serde_serializer"
version = "0.1.0"
edition = "2021"
authors = ["Chandra Penke <chandrapenke@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
serde = { version = "1.0", features = [ "derive" ] }
